syntax = "proto3";

option csharp_namespace = "AnimalHealth.Application.Models";


message UserModel {
  int32 id = 1;
  string name = 2;
}

message UserLoginModel {
  string login = 1;
  string password = 2;
}